# AetherPix

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
.cargo/: config.toml
.zed/: settings.json
assets/: tailwind.css
config/: development.yaml  test.yaml
examples/: playground.rs
frontend/: package.json  svelte.config.js  vite.config.ts
frontend/.zed/: settings.json
frontend/src/: app.html
frontend/src/lib/components/: GlobalModal.svelte  PreferencesPanel.svelte  ProfilePanel.svelte  ResultCarousel.svelte  ResultInfo.svelte  SecurityPanel.svelte  Sidebar.svelte  StatsPanel.svelte  ThemeToggle.svelte  UploadProgress.svelte
frontend/src/lib/state/: admin.svelte.ts  auth.svelte.ts  msg.svelte.ts  upload.svelte.ts  (+3 more)
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_users.rs  m20260201_113639_settings.rs  m20260202_143532_images.rs  m20260206_114421_tmps.rs
src/: app.rs  components.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  server.rs  state.rs  utils.rs  views.rs
src/common/: client.rs  mod.rs  settings.rs
src/components/: copy_link.rs  image_gallery.rs  loading.rs  route_button.rs
src/controllers/: auth.rs  mod.rs  profile.rs  settings.rs  status.rs  upload.rs  view.rs
src/fixtures/: settings.yaml  users.yaml
src/mailers/: auth.rs
src/models/: images.rs  mod.rs  settings.rs  tmps.rs  users.rs
src/models/_entities/: images.rs  mod.rs  prelude.rs  settings.rs  tmps.rs  users.rs
src/server/: handlers.rs  middleware.rs  route.rs
src/server/handlers/: login.rs  presign.rs  r2_url.rs
src/server/middleware/: cookie_cleanup.rs
src/tasks/: admin.rs
src/views/: auth.rs  gallery.rs  home.rs  login.rs  mod.rs  profile.rs  settings.rs  upload.rs  view.rs
src/workers/: mod.rs  thumbnail.rs
tests/models/: mod.rs  tmps.rs  users.rs
tests/requests/: auth.rs  prepare_data.rs
tests/tasks/: admin.rs  mod.rs
tests/workers/: thumbnail.rs
(+19 files in other folders)
