[workspace]

[package]
name = "AetherPix"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "aether_pix-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.16.4" }

[dependencies]
loco-rs = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
tokio = { version = "1.49.0", default-features = false, features = [
    "rt-multi-thread",
] }
async-trait = { version = "0.1.89" }
axum = { version = "0.8.8" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
regex = { version = "1.12.2" }
migration = { path = "migration" }
sea-orm = { version = "1.1.19", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
chrono = { version = "0.4.43" }
validator = { version = "0.20.0" }
uuid = { version = "1.20.0", features = ["v4", "v7"] }
include_dir = { version = "0.7" }
axum-extra = { version = "0.12.5", features = ["form"] }
image = { version = "0.25.9" }
cookie = { version = "0.18.1" }
thiserror = "2.0.18"
aws-sdk-s3 = { version = "1.121.0", features = ["behavior-version-latest"] }
aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
mime_guess2 = { version = "2.3.1" }
tokio-util = { version = "0.7.18", features = ["io"] }
webp = "0.3.1"

[[bin]]
name = "aether_pix-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }

[profile.release.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
